testsuite/tests/th/TH_implicitParamsErr3.stderr

TH_implicitParamsErr3.hs:5:15: error:
    • Illegal variable name: ‘invalid name’
      When splicing a TH expression:
        let ?invalid name = "hi"
 in ?invalid name
    • In the untyped splice:
        $(letE
            [implicitParamBindD "invalid name" [| "hi" |]]
            (implicitParamVarE "invalid name"))
